Register new ManyToMany

--- a/GameLauncher.API/GameLauncher.API.csproj
+++ b/GameLauncher.API/GameLauncher.API.csproj
@@ -27,7 +27,7 @@
 
   <ItemGroup>
     <None Update="gamelauncher.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
