--- a/GameLauncher.Services/GameLauncher.Services.csproj
+++ b/GameLauncher.Services/GameLauncher.Services.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Gameloop.Vdf" Version="0.6.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RestSharp" Version="111.2.0" />
+    <PackageReference Include="YamlDotNet.NetCore" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
