--- a/GameLauncher.AdminProvider/GameLauncher.AdminProvider.csproj
+++ b/GameLauncher.AdminProvider/GameLauncher.AdminProvider.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GameLauncher.Connector\GameLauncher.Connector.csproj" />
     <ProjectReference Include="..\GameLauncher.ObservableObjet\GameLauncher.ObservableObjet.csproj" />
   </ItemGroup>
