--- a/GameLauncher.Services/GameLauncher.Services.csproj
+++ b/GameLauncher.Services/GameLauncher.Services.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="GameFinder.StoreHandlers.EADesktop" Version="4.2.2" />
     <PackageReference Include="GameFinder.StoreHandlers.EGS" Version="4.2.2" />
     <PackageReference Include="Gameloop.Vdf" Version="0.6.2" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.0.15" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RestSharp" Version="111.2.0" />
     <PackageReference Include="YamlDotNet.NetCore" Version="1.0.0" />
