--- a/GameLauncherAdmin/GameLauncherAdmin.csproj
+++ b/GameLauncherAdmin/GameLauncherAdmin.csproj
@@ -13,6 +13,7 @@
 	<Nullable>enable</Nullable>
 	<UseWinUI>true</UseWinUI>
     <EnableMsixTooling>true</EnableMsixTooling>
+    <BaseOutputPath>D:\Documents\repos\GameLauncher\Output</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
